--- a/index.html
+++ b/index.html
@@ -20,82 +20,138 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <div id="landing" class="section">
-        <h1>This is the Demo Ecommerce Website</h1>
-        <h2>Welcome to the Landing Page</h2>
+        <h1 class="main-title">Ad Tracking Demo Ecommerce</h1>
+        <h2 class="welcome-title">Welcome to Landing Page</h2>
         <nav>
-            <a href="#shopping">Go to Shopping Website</a>
-            <a href="#cart">Go to Cart & Purchase</a>
-            <a href="#newsletter">Subscribe to Newsletter</a>
+            <a href="#products">View Products Offered</a>
+            <a href="#cart">View Cart Items</a>
+            <a href="#newsletter">Subscribe for Updates</a>
         </nav>
     </div>
 
-    <div id="shopping" class="section" style="display:none;">
-        <h1>Shopping Website</h1>
-        <div class="item" data-id="001" onclick="addToCart('Oral-Zahnbürste', 5, '001')">Item 1: Oral-Zahnbürste (Price: $5)</div>
-        <div class="item" data-id="002" onclick="addToCart('Electric Razor', 15, '002')">Item 2: Electric Razor (Price: $15)</div>
-        <div class="item" data-id="003" onclick="addToCart('Hair Dryer', 10, '003')">Item 3: Hair Dryer (Price: $10)</div>
+    <div id="products" class="section" style="display:none;">
+        <h1>Products Offered</h1>
+        <div class="item-block" data-id="001" onclick="addToCart('Oral-Zahnbürste', 5, '001', 'Oral-B', 'Blue', 1)">
+            <p>Name: Oral-Zahnbürste</p>
+            <p>Brand: Oral-B</p>
+            <p>Color: Blue</p>
+            <p>Price: €5</p>
+            <p>Quantity: <span class="quantity">1</span></p>
+        </div>
+        <div class="item-block" data-id="002" onclick="addToCart('Electric Razor', 15, '002', 'Brand X', 'Black', 1)">
+            <p>Name: Electric Razor</p>
+            <p>Brand: Brand X</p>
+            <p>Color: Black</p>
+            <p>Price: €15</p>
+            <p>Quantity: <span class="quantity">1</span></p>
+        </div>
+        <div class="item-block" data-id="003" onclick="addToCart('Hair Dryer', 10, '003', 'Brand Y', 'White', 1)">
+            <p>Name: Hair Dryer</p>
+            <p>Brand: Brand Y</p>
+            <p>Color: White</p>
+            <p>Price: €10</p>
+            <p>Quantity: <span class="quantity">1</span></p>
+        </div>
     </div>
 
     <div id="cart" class="section" style="display:none;">
-        <h1>Cart & Purchase</h1>
+        <h1>View Cart Items</h1>
         <div id="cart-items"></div>
+        <button id="proceed-checkout" onclick="proceedToCheckout()">Proceed to Checkout</button>
+    </div>
+
+    <div id="checkout" class="section" style="display:none;">
+        <h1>Checkout</h1>
+        <div id="checkout-items"></div>
         <input type="text" id="firstName" placeholder="First Name"><br>
         <input type="text" id="lastName" placeholder="Last Name"><br>
         <input type="text" id="country" placeholder="Country"><br>
-        <button id="purchase" onclick="purchase()">Complete Purchase</button>
+        <button id="purchase" onclick="purchase()">Finish Purchase</button>
     </div>
 
     <div id="newsletter" class="section" style="display:none;">
-        <h1>Subscribe to get more updates on promo codes and new events</h1>
+        <h1 class="newsletter-title">Subscribe for Updates</h1>
+        <p>Get the latest promo codes and event news!</p>
         <input type="email" id="email" placeholder="Enter email"><br>
         <button id="subscribe" onclick="subscribe()">Subscribe</button>
     </div>
 
     <div id="thankyou" class="section" style="display:none;">
-        <h1>Thank You for Subscribing and Connecting with Us!</h1>
+        <h1>Thank You for Shopping!</h1>
     </div>
 
     <script>
         let cart = [];
 
-        function addToCart(name, price, id) {
-            cart.push({ name, price, id });
+        function addToCart(name, price, id, brand, color, quantity) {
+            cart.push({ name, price, id, brand, color, quantity });
             alert(`${name} added to cart!`);
-            document.getElementById('shopping').style.display = 'none';
+            document.getElementById('products').style.display = 'none';
             document.getElementById('cart').style.display = 'block';
             updateCartDisplay();
         }
 
         function updateCartDisplay() {
             const cartItems = document.getElementById('cart-items');
-            cartItems.innerHTML = cart.map(item => `<p>${item.name} ($${item.price}) - ID: ${item.id}</p>`).join('');
+            cartItems.innerHTML = cart.map(item => `
+                <div class="cart-item">
+                    <p>${item.name} ($${item.price}) - ID: ${item.id}</p>
+                    <p>Brand: ${item.brand}, Color: ${item.color}, Qty: ${item.quantity}</p>
+                    <button onclick="removeFromCart('${item.id}')">Remove</button>
+                    <button onclick="addQuantity('${item.id}')">Add Qty</button>
+                </div>
+            `).join('');
+        }
+
+        function removeFromCart(id) {
+            cart = cart.filter(item => item.id !== id);
+            updateCartDisplay();
+            if (cart.length === 0) {
+                document.getElementById('cart').style.display = 'none';
+                document.getElementById('landing').style.display = 'block';
+            }
+        }
+
+        function addQuantity(id) {
+            const item = cart.find(item => item.id === id);
+            if (item) item.quantity++;
+            updateCartDisplay();
+        }
+
+        function proceedToCheckout() {
+            if (cart.length > 0) {
+                document.getElementById('cart').style.display = 'none';
+                document.getElementById('checkout').style.display = 'block';
+                const checkoutItems = document.getElementById('checkout-items');
+                checkoutItems.innerHTML = cart.map(item => `
+                    <p>${item.name} ($${item.price}) - Qty: ${item.quantity}</p>
+                `).join('');
+            } else {
+                alert('Cart is empty!');
+            }
         }
 
         function purchase() {
-            if (cart.length > 0) {
-                const firstName = document.getElementById('firstName').value;
-                const lastName = document.getElementById('lastName').value;
-                const country = document.getElementById('country').value;
-                if (firstName && lastName && country) {
-                    window.dataLayer = window.dataLayer || [];
-                    window.dataLayer.push({
-                        event: 'purchase',
-                        value: cart.reduce((sum, item) => sum + item.price, 0),
-                        currency: 'USD',
-                        items: cart,
-                        firstName: firstName,
-                        lastName: lastName,
-                        country: country
-                    });
-                    alert('Purchase completed!');
-                    cart = [];
-                    document.getElementById('cart').style.display = 'none';
-                    document.getElementById('landing').style.display = 'block';
-                } else {
-                    alert('Please fill all fields!');
-                }
+            const firstName = document.getElementById('firstName').value;
+            const lastName = document.getElementById('lastName').value;
+            const country = document.getElementById('country').value;
+            if (firstName && lastName && country) {
+                window.dataLayer = window.dataLayer || [];
+                window.dataLayer.push({
+                    event: 'purchase',
+                    value: cart.reduce((sum, item) => sum + item.price * item.quantity, 0),
+                    currency: 'EUR',
+                    items: cart,
+                    firstName: firstName,
+                    lastName: lastName,
+                    country: country
+                });
+                alert('Purchase completed!');
+                cart = [];
+                document.getElementById('checkout').style.display = 'none';
+                document.getElementById('thankyou').style.display = 'block';
             } else {
-                alert('Cart is empty!');
+                alert('Please fill all fields!');
             }
         }
 
